# Sap2000Api

./: .gitignore  LICENSE  README.md  pyproject.toml
csi-OAPI/: AreaObj.SetLoadUniform.txt  AreaObj.SetLoadUniformToFrame.txt  ConstraintDef.SetDiaphragm.txt  PointObj.SetConstraint.txt
src/Sap2000Api/: Area.py  Frame.py  Group.py  Load.py  Material.py  Node.py  Readme.md  Result.py  Sap2000Api.py  SapResult.py  __init__.py
