[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Sap2000Api"
version = "1.1.0"
description = "Sap2000 API for python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "LaoLin" }
]
requires-python = ">=3.8"

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]